# fulgurance

./: Cargo.toml  README.md
benches/: arc.rs  car.rs  clock.rs  fifo.rs  lfu.rs  lru.rs  mru.rs  random.rs  simple_lru.rs  slru.rs  two_q.rs
examples/: basic_usage.rs
src/: lib.rs
src/policies/: arc.rs  car.rs  clock.rs  fifo.rs  lfu.rs  lru.rs  mod.rs  mru.rs  random.rs  slru.rs  two_q.rs
src/prefetch/: adaptive.rs  history_based.rs  markov.rs  mod.rs  sequential.rs  stride.rs
