[package]
name = "fulgurance"
version = "0.2.0"
edition = "2024"
authors = ["Steve Roques <steve.roques@gmail.com>"]
license = "MIT"
description = "A blazing-fast, adaptive prefetching and caching library for Rust"
homepage = "https://github.com/roquess/fulgurance"
repository = "https://github.com/roquess/fulgurance"
readme = "README.md"
keywords = ["cache", "prefetch", "performance", "lru", "adaptive"]
categories = ["caching", "algorithms", "data-structures"]

[dependencies]
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[features]
default = []

[[bench]]
name = "lru"
harness = false

[[bench]]
name = "mru"
harness = false

[[bench]]
name = "lfu"
harness = false

[[bench]]
name = "fifo"
harness = false

[[bench]]
name = "random"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = true

